fixed navigation spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -153,7 +153,7 @@ input, select, textarea {
 
 	h2 {
 		font-size: 1.5em;
-		line-height: 1.5em;
+		line-height: 2em;
 	}
 
 	h3 {
